--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -1,6 +1,6 @@
 .task {
   width: 100%;
-  background-color: #262626;
+  background-color: #181c25;
   border: 1px solid #333333;
   padding: 16px;
   border-radius: 8px;
