--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   position: relative;
   height: 200px;
-  background-color: #0d0d0d;
+  background-color: #181c25;
   margin-bottom: 90px;
 }
 
@@ -21,7 +21,7 @@
     height: 100%;
     flex: 1;
     color: #fff;
-    background-color: #262626;
+    background-color: #f2f2f2;
     border: 1px solid #0d0d0d;
     border-radius: 8px;
     padding: 0 16px;
