--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@
 body {
   min-height: 100vh;
   color: #f2f2f2;
-  background-color: #191919;
+  background-color: #0e121b;
   font-family: "Inter", sans-serif;
   font-weight: 400;
 }
