--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -20,7 +20,7 @@
   input {
     height: 100%;
     flex: 1;
-    color: #fff;
+    color: #0d0d0d;
     background-color: #f2f2f2;
     border: 1px solid #0d0d0d;
     border-radius: 8px;
